[package]
name = "re_tracker_by_zip"
version = "0.1.0"
edition = "2021"
authors = ["RE_TRACKER Team"]
description = "Rossmoor Housing Inventory Tracker - Cross-platform housing market data visualization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/urmt/RE_TRACKER_by_ZIP"

[dependencies]
# HTTP client for web scraping and data fetching
reqwest = { version = "0.11", features = ["blocking", "json"] }

# HTML parsing for web scraping
scraper = "0.18"
select = "0.6"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# CSV parsing for Zillow data
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime (for future IPFS integration)
tokio = { version = "1.35", features = ["full"] }

# P2P networking (for future IPFS integration)
# libp2p = { version = "0.53", optional = true }

# HTTP server for frontend
tiny_http = "0.12"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
# Testing utilities
mockito = "1.2"
tempfile = "3.8"

[profile.release]
# Optimize for size and performance
opt-level = "z"
lto = true
codegen-units = 1
strip = true
